terraform_infra_deployment/security_group.tf
#Create SG for allowing TCP/80 & TCP/22
resource "aws_security_group" "sg" {
    name        = "sg"
    description = "Allow TCP/80 & TCP/22"
    vpc_id      = aws_vpc.vpc.id
    ingress {
        description = "Allow SSH traffic"
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        description = "allow traffic from TCP/80"
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}

output "Webserver-Public-IP" {
    value = aws_instance.webserver.public_ip
}
